--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -591,7 +591,6 @@ ul {
   width: 206px;
   height: 80px;
   margin-left: 70px;
-  margin-top: 15px;
 }
 .footer-social-list {
   display: flex;
@@ -620,6 +619,81 @@ ul {
   height: 20px;
   fill: var(--background-body);
 }
+.subscription {
+  display: block;
+  width: 570px;
+  height: 86px;
+  margin-left: 93px;
+}
+.subscription-text {
+  margin: 0;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  margin-bottom: 20px;
+  margin-top: 15px;
+
+  text-transform: uppercase;
+
+  color: var(--background-body);
+}
+.subscription-all {
+  display: flex;
+}
+.subscription-form-input {
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.25;
+
+  color: rgba(255, 255, 255, 0.6);
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: var(--background-head-and-footer);
+}
+.subscription-button-form {
+  display: flex;
+  align-items: center;
+  background-color: var(--accent);
+  border: 1px solid transparent;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  padding: 10px 32px;
+
+  margin-left: 10px;
+
+  min-width: 200px;
+}
+.subscription-button-text-form {
+  color: var(--background-body);
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  text-align: center;
+}
+.icon-send {
+  min-width: 24px;
+  max-height: 24px;
+  margin-left: 10px;
+
+  fill: var(--background-body);
+}
+
 /* PORTFOLIO */
 
 .main {
@@ -665,7 +739,7 @@ ul {
   letter-spacing: 0.03em;
   text-align: center;
 
-  transition: color 2500ms var(--cubic);
+  transition: color 250ms var(--cubic);
 }
 .button-service:hover,
 .button-service:focus {
@@ -713,7 +787,7 @@ ul {
 .img-item:hover .img-hover-text {
   opacity: 1;
   transform: translateY(0);
-  transition: transform 250z0ms var(--cubic);
+  transition: transform 250ms var(--cubic);
 }
 .img-hover-text {
   /* display: block; */
@@ -817,4 +891,186 @@ ul {
   width: 11px;
   height: 11px;
   fill: var(--logo);
+
+  transition: fill 250ms var(--cubic);
+}
+.button-end:hover .svg-end,
+.button-end:focus .svg-end {
+  fill: var(--accent);
+}
+.modal-head {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  margin: 0;
+
+  color: var(--title-text-color);
+}
+.form {
+  width: 448px;
+  height: 342px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 12px;
+  /* outline: 2px solid red; */
+}
+.form-field {
+  position: relative;
+  /* outline: 2px solid green; */
+}
+.form-label {
+  display: flex;
+  flex-direction: column;
+}
+.form-name {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.17;
+  margin-bottom: 4px;
+
+  letter-spacing: 0.01em;
+
+  color: var(--primary-text-color);
+}
+.form-input {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  height: 40px;
+  margin-bottom: 10px;
+  padding: 12px;
+  padding-left: 42px;
+
+  transition: border 250ms var(--cubic);
+}
+.textarea {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  height: 120px;
+  width: 100%;
+  resize: none;
+
+  padding-left: 16px;
+  padding-top: 12px;
+  padding-right: 12px;
+  padding-bottom: 12px;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+
+  transition: border 250ms var(--cubic);
+}
+.icon-modal {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  fill: var(--title-text-color);
+
+  top: 55%;
+  left: 12px;
+
+  transform: translateY(-50%);
+  transition: fill 250ms var(--cubic);
+}
+.form-input:focus {
+  border: 1px solid var(--accent);
+  border-radius: 4px;
+}
+.form-input:focus-within + .icon-modal {
+  fill: var(--accent);
+}
+.textarea:focus {
+  border: 1px solid var(--accent);
+  border-radius: 4px;
+}
+.checkbox {
+  margin-top: 20px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+.checkbox-label {
+  position: relative;
+}
+.checkbox-input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.checkbox-icon {
+  position: absolute;
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid black;
+  border-radius: 4px;
+
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.checkbox-input:checked + .checkbox-icon {
+  background-color: var(--accent);
+  background-image: url(../images/SVG/iconcheck.svg);
+  background-size: contain;
+  background-origin: border-box;
+  border-color: var(--accent);
+}
+
+.contract {
+  margin-left: 24px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+
+  color: var(--primary-text-color);
+}
+.contract-link {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+
+  color: var(--accent);
+}
+.submit {
+  display: flex;
+  justify-content: center;
+}
+.button-form {
+  background-color: var(--accent);
+  border: 1px solid transparent;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  padding: 10px 32px;
+
+  min-width: 200px;
+}
+.button-text-form {
+  color: var(--background-body);
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  text-align: center;
 }
